# Project2D

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.d  Makefile  Physics.d  Project2DTD  README.md  Sprite.d  assets  ideas.txt  main.d  meson.build  windows.cross
.github/workflows/: build.yml  codeql-analysis.yml
cmake/: FindSDL2_image.cmake
include/: Canvas.h  Canvas_LayerData.h  Engine.h  JParser.h  TextureHandler.h  TextureMap.h
include/ECS/: Components.h  EntityComponentSystem.h  LuaEngine.h  ScriptComponent.h  SpriteComponent.h
legacy/: Canvas_LayerData.h  Main.cpp  ObjectBuilder.h
legacy/ECS/: AnimStruct.h  Components.h  DataComponent.h  EntityWrapper.cpp  InputManager.h  LuaEngine.cpp  QueueingThread.h  ScriptComponent.h
src/: Canvas.cpp  Canvas.h  Canvas_LayerData.cpp  Canvas_LayerData.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityComponentSystem.h  EntityType.cpp  EntityType.h  JParser.cpp  JParser.h  LevelLoader.cpp  LevelLoader.h  LuaScripter.h  Main.cpp  ObjectBuilder.cpp  ObjectBuilder.h  Physics.cpp  Physics.h  Sprite.cpp  Sprite.h  TEngine.cpp  TEngine.h  TextureHandler.cpp  TextureHandler.h  TextureMap.cpp  TextureMap.h  engine.h  flagger.cpp  flagger.h  json.cpp  json.h  logger.h  lua.h  main.cpp
src/Core/: Engine.cpp  Engine.h
src/ECS/: AnimStruct.h  ChaiEngine.h  Components.h  DataComponent.h  EntityComponentSystem.h  EntityData.h  EntityWrapper.cpp  EntityWrapper.h  InputManager.cpp  InputManager.h  LuaEngine.cpp  LuaEngine.h  PositionComponent.h  QueueingThread.h  ScriptComponent.cpp  ScriptComponent.h  SpriteComponent.h
src/OF/: objectFactory.cpp  objectFactory.h
src/utils/: Canvas.cpp  Canvas.h  Flagger.cpp  Flagger.h  Json.cpp  Json.h  Logger.h  LuaProcessor.cpp  LuaProcessor.h  MicroLuaProcessor.cpp  MicroLuaProcessor.h  QueueingThread.h
src/utils/draw/: Atlas.cpp  Atlas.h  AtlasIndex.cpp  AtlasIndex.h  Sprite.cpp  Sprite.h  embeddedSprites.h
src/utils/draw/atlas/: Atlas.cpp  Atlas.h  AtlasMan.cpp  AtlasMan.h  EmbeddedSprites.h
src/utils/entity/: Component.h  Components.h  Entity.cpp  Entity.h  EntityData.h  Manager.cpp  Manager.h  SpriteComponent.cpp  SpriteComponent.h
